examples/errors/parsing/expr-triple-trailing.cn
main : () [impure] =
  let p = (1, 2, 3, );
  ()
